# FALCON

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
app_actuator_test/: CMakeLists.txt
app_actuator_test/src/: actuator_test.cpp
app_flight_logger/: CMakeLists.txt
app_flight_logger/log/: Flight_Fri_Nov__4_13_49_01_2022.csv
app_flight_logger/src/: flight_logger.cpp
apps/: CMakeLists.txt
apps/app_actuator_test/src/: actuator_test.cpp
apps/app_flight_logger/include/: mavsdk_helper.h
apps/app_flight_logger/log/: Flight_Mon_Dec_12_13_44_59_2022.csv  Flight_Mon_Dec_12_13_45_52_2022.csv  Flight_Mon_Dec_12_13_46_39_2022.csv  Flight_Mon_Dec_12_13_57_37_2022.csv  Flight_Mon_Dec_12_14_15_15_2022.csv  Flight_Mon_Dec_12_14_17_07_2022.csv  Flight_Mon_Nov_21_12_28_43_2022.csv  Flight_Mon_Nov_21_12_29_40_2022.csv  Flight_Mon_Nov_21_12_39_49_2022.csv  Flight_Mon_Nov_21_12_40_43_2022.csv  Flight_Tue_Dec_13_09_13_40_2022.csv  Flight_Tue_Dec_13_09_17_00_2022.csv  Flight_Tue_Dec_13_09_18_51_2022.csv  Flight_Tue_Dec_13_09_30_42_2022.csv  Flight_Tue_Dec_13_10_01_22_2022.csv  sysID.csv
apps/app_flight_logger/src/: flight_logger.cpp
apps/app_grasper/: CMakeLists.txt
apps/app_grasper/log/: grasp1.csv
apps/app_grasper/src/: grasper.cpp
apps/app_grasper_sim/: CMakeLists.txt
apps/app_grasper_sim/log/: grasp1.csv  visualize.py
apps/app_grasper_sim/src/: grasper_sim.cpp  u_opt.csv  u_opt_old_good.csv
apps/app_gripper_live_test/: CMakeLists.txt
apps/app_gripper_live_test/serialib/: serialib.cpp  serialib.h
apps/app_gripper_live_test/src/: gripper_live_test.cpp
apps/app_gripper_mocap_test/: CMakeLists.txt
apps/app_gripper_mocap_test/src/: gripper_mocap_test.cpp
apps/app_gripper_test/: CMakeLists.txt
apps/app_gripper_test/src/: gripper_test.cpp
apps/app_mission/: CMakeLists.txt
apps/app_mission/include/: mavsdk_helper.h
apps/app_mission/log/: Flight_Sun_Nov_20_12_43_50_2022.csv  Flight_Sun_Nov_20_12_46_52_2022.csv  flight_analysis.py
apps/app_mission/src/: mission.cpp
apps/app_mpc_plane/: CMakeLists.txt
apps/app_mpc_plane/log/: log.csv
apps/app_mpc_plane/src/: mpc_plane.cpp
apps/app_mpc_test/: CMakeLists.txt
apps/app_mpc_test/src/: mpc_test.cpp
apps/app_multithread_test/: CMakeLists.txt
apps/app_multithread_test/src/: multithread_test.cpp
apps/app_traj_gen/: CMakeLists.txt
apps/app_traj_gen/src/: traj_gen.cpp
apps/app_video_writer_test/: CMakeLists.txt
apps/app_video_writer_test/src/: video_writer_test.cpp
data/: thrust-throttle.csv
flight_plans/: Maiden_Flight.plan  Maiden_Flight_2.plan  circle.plan  gazebo_mission1.plan  gazebo_offboard.plan  gazebo_offboard_working.plan  gazebo_pickup.plan  gazebo_pickup_v2.plan  gazebo_sysid.plan  gazebo_test_flight.plan  mpc_dietikon.plan  offline_traj_dietikon.plan  offline_traj_dietikon_SIM.plan  offline_traj_dietikon_SIM_2.plan  offline_traj_dietikon_SIM_3.plan  offline_traj_dietikon_SIM_4.plan  offline_traj_dietikon_SIM_5.plan  offline_traj_dietikon_SIM_9_5.plan  offline_traj_dietikon_SIM_9_5_v2.plan
helper/visualize_mpc/: visualize.py
helper/waypoints/: waypoints.py
helper_apps/arduino_code/gripper/: gripper.ino
helper_apps/arduino_code/gripper_raptor/gripper_raptor/: gripper_raptor.ino
helper_apps/sysID/: sysID_old.csv  sysid_sim.py  sysid_sim_old.py
helper_apps/thrust-throttle/: .~lock.thrust-throttle.csv#
helper_apps/video_save/: video_save.py
helper_apps/waypoints/: waypoints.py
lib/: CMakeLists.txt
lib/mpc/: CMakeLists.txt
lib/mpc/include/: mpc.h
lib/mpc/src/: mpc.cpp  mpc_cartesian.cpp
old_code/lift-drag/: example.py
simulation/: sysid_sim.py
